Update sortpom plugin to newest version
Update the sortpom plugin to add sortDependencyManagement
element.

Remove dependency on IOUtils