@@ -1,5 +1,5 @@
 /*
- * Copyright 2021-2022 DiffPlug
+ * Copyright 2021-2023 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,11 +15,10 @@
  */
 package com.diffplug.spotless.glue.pom;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
+import java.io.*;
+import java.nio.charset.Charset;
+import java.nio.file.Files;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -40,10 +39,12 @@ public class SortPomFormatterFunc implements FormatterFunc {
 
 	@Override
 	public String apply(String input) throws Exception {
-		// SortPom expects a file to sort, so we write the inpout into a temporary file
+		// SortPom expects a file to sort, so we write the input into a temporary file
 		File pom = File.createTempFile("pom", ".xml");
 		pom.deleteOnExit();
-		IOUtils.write(input, new FileOutputStream(pom), cfg.encoding);
+		try (BufferedWriter writer = new BufferedWriter(new FileWriter(pom, Charset.forName(cfg.encoding)))) {
+			writer.write(input);
+		}
 		SortPomImpl sortPom = new SortPomImpl();
 		sortPom.setup(new MySortPomLogger(), PluginParameters.builder()
 				.setPomFile(pom)
@@ -52,11 +53,12 @@ public class SortPomFormatterFunc implements FormatterFunc {
 				.setFormatting(cfg.lineSeparator, cfg.expandEmptyElements, cfg.spaceBeforeCloseEmptyElement, cfg.keepBlankLines)
 				.setIndent(cfg.nrOfIndentSpace, cfg.indentBlankLines, cfg.indentSchemaLocation)
 				.setSortOrder(cfg.sortOrderFile, cfg.predefinedSortOrder)
-				.setSortEntities(cfg.sortDependencies, cfg.sortDependencyExclusions, cfg.sortPlugins, cfg.sortProperties, cfg.sortModules, cfg.sortExecutions)
-				.setTriggers(false)
+				.setSortEntities(cfg.sortDependencies, cfg.sortDependencyExclusions, cfg.sortDependencyManagement,
+						cfg.sortPlugins, cfg.sortProperties, cfg.sortModules, cfg.sortExecutions)
+				.setIgnoreLineSeparators(false)
 				.build());
 		sortPom.sortPom();
-		return IOUtils.toString(new FileInputStream(pom), cfg.encoding);
+		return Files.readString(pom.toPath(), Charset.forName(cfg.encoding));
 	}
 
 	private static class MySortPomLogger implements SortPomLogger {
